--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,4 @@
-h1{
+/*h1{
     display: block;
     text-align: center;
 }
@@ -40,6 +40,6 @@ h1{
     transition: all 1s;
     outline: none;
 }
-
+*/
 
 
