--- a/estilos.css
+++ b/estilos.css
@@ -1,8 +1,40 @@
-/*h1{
+h1{
     display: block;
     text-align: center;
 }
+.form{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 
+.form .element{
+    margin: 10px 0px;
+    height: 50px;
+    text-align: center;
+    border: 1px solid rgb(1, 90, 255);
+    border-radius: 5px;
+    outline: none;
+}
+button{
+    background-color: rgb(1, 90, 255);
+    color: white;
+}
+button:hover{
+    cursor: pointer;
+}
+p{
+    width: 80%;
+    margin:50px auto;
+    border: 1px solid rgb(1, 90, 255);
+    border-radius: 5px;
+    font-size: 32px;
+    line-height: 60px;
+    letter-spacing: 2px;
+    padding: 2%;
+}
+/*
 #video{
     display: none;
     width: 60%;
