--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,9 @@
 h1{
     display: block;
     text-align: center;
+    color: gold;
+    letter-spacing: 2px;
+    font-size: 40px;
 }
 .form{
     width: 25%;
@@ -25,12 +28,14 @@ button:hover{
     cursor: pointer;
 }
 .instrucciones{
+    text-align: justify;
     width: 80%;
     margin:50px auto;
     border: 1px solid rgb(1, 90, 255);
+    color: rgb(13, 37, 83);
     border-radius: 5px;
-    font-size: 32px;
-    line-height: 60px;
+    font-size: 28px;
+    line-height: 50px;
     letter-spacing: 2px;
     padding: 2%;
 }
